--- a/css/index.css
+++ b/css/index.css
@@ -65,9 +65,15 @@
 }
 .profilepicture{
     border-radius: 50%;
-    width: 50%;
+    width: 100px;
+    max-width: 100px;
+    min-width: 100px;
+    height: 100px;
+    min-height: 100px;
+    max-height: 100px;
     position: absolute;
     left: 25%;
+    top: 40%;
     margin-top: 10px;
 }
 .left{
