--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 #obenrechts{
   margin-right: 15px;
 }
@@ -87,7 +88,7 @@ body,html{
     margin: 0;
 }
 *{
-    font-family: -apple-system, 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 #dark{
     background: #002884;
