--- a/css/index.css
+++ b/css/index.css
@@ -97,9 +97,8 @@
   margin-top: 10px;
   margin-bottom: 10px;
   position: relative;
-  left: 24%;
-  width: 200px;
-  height: 200px;
+  left: 35%;
+  width: 30%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   display: block;
